# holon

./: .gitignore  .holon_pids  AGENTS.md  CONTAINER_DEPLOYMENT.md  Dockerfile.unified  LICENSE  README.md  debug_store.py  debug_ws.py  docker-compose.yaml  nginx.conf  supervisord.conf
.github/workflows/: pr-build.yml  pr-checks.yml  pr-verify.yml
cli/: .gitignore  README.md  pyproject.toml
cli/docs/: CLI.md  spec.md
cli/src/holon_cli/: __init__.py  __main__.py  cli.py  config.py  models.py
cli/tests/: test_cli.py  test_config.py  test_models.py
docs/: CRITIQUE.md  DESIGN.md  holon_creation_workflow.md
engine/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
engine/docs/: QUICKSTART.md  spec.md  swagger.yaml
engine/src/holon_engine/: __init__.py  api.py  database.py  engine.py  main.py  models.py  persistence.py
engine/tests/: __init__.py  test_api.py  test_engine.py
samples/: README.md
samples/assistant/: holon.yaml
samples/basic-gemini-chat/: README.md  holon.yaml
samples/code-review-debate/: README.md  holon.yaml
samples/data-analyst-mcp/: README.md  holon.yaml
samples/grok-webhook-event/: README.md  holon.yaml
samples/multi-agent-summary/: README.md  holon.yaml
samples/news/: holon.yaml
samples/slack-gemini-chat/: README.md  holon.yaml
scripts/: holon_local.sh  run_local.sh  start_local.sh  stop_local.sh
specs/: CLI.md  DESIGN.md
tests/: __init__.py  test_integration_deploy.py  test_integration_ollama.py  test_integration_projects_error.py  test_integration_version.py  test_integration_websocket_chat.py
tests/holon-yaml/: ollama.yaml
web/: .gitignore  IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/docs/: IMPLEMENTATION.md  spec.md
web/src/: App.tsx
web/src/components/: DeployDialog.tsx  Layout.tsx  StatusBadge.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
web/src/lib/: utils.ts
web/src/services/: api.ts
web/src/test/: DashboardView.test.tsx  ProjectsView.integration.test.tsx  ProjectsView.test.tsx  README.md
web/src/types/: api.ts
web/src/views/: ChatView.tsx  DashboardView.tsx  ProcessesView.tsx  ProjectsView.tsx  RunDetailView.tsx
